# QuackBot

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
deploy/: quackbot.service
src/quack/: __main__.py  bot.py
src/quack/core/registrations/: repo.py
src/quack/features/balance/: commands.py  repo.py  service.py  types.py
src/quack/features/payments/: actions.py  commands.py  listeners.py  manager.py  presenter.py  repo.py  session.py
src/quack/features/registrations/: commands.py  repo.py  services.py
src/quack/payments/: debts.py  keyboard.py  manager.py  session.py
src/quack/registration/: services.py
src/quack/storage/: db.py  payments.py  registrations.py  schema.sql
src/quack/storage/migrations/: 001_add_registration_table.sql
src/quack/storage/queries/: payments.sql  users.sql
